# mini_project1_BIU

./: .gitignore  Hexter_Project1.ipynb  README.md  pyproject.toml  requirements.txt
